# positsh-backend

./: .env.example  Cargo.toml  README.md  docker-compose.yml
migrations/: 20230408190203_init.down.sql  20230408190203_init.up.sql
sql/: create_posit.sql  delete_posit.sql  schema.sql  update_posit.sql
sql/posit/: get_posit.sql  get_posits.sql
sql/user/: create_user.sql  get_user.sql
src/: config.rs  database.rs  errors.rs  handler.rs  handlers.rs  lib.rs  main.rs  model.rs  models.rs  schema.rs  users.rs
src/database/: mod.rs  posit.rs  user.rs
src/handlers/: posit.rs  user.rs
src/models/: posit.rs  user.rs
src/posits/: handler.rs  model.rs  schema.rs
src/users/: auth.rs  handler.rs  model.rs  schema.rs
src/utilities/: schemas.rs
