[package]
name = "psh-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
config = "0.13"
derive_more = "0.99"
dotenv = "0.15"
tokio-pg-mapper = "0.2"
tokio-pg-mapper-derive = "0.2"
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
deadpool-postgres = { version = "0.10", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }