[package]
name = "psh-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
chrono = { version = "0.4.24", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
bcrypt = "0.14"
jsonwebtoken = "8.3.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
sqlx = { version = "0.6.3", features = ["runtime-actix-native-tls", "postgres", "uuid", "macros", "chrono"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }
actix-web-httpauth = "0.8.0"
